(fix) css error in h1

--- a/app/src/lib/styles/style.css
+++ b/app/src/lib/styles/style.css
@@ -52,7 +52,7 @@ a {
   border-right: solid 2px #444;
 }
 
-.weather-forecast-item p, h1 {
+.weather-forecast-item p,.weather-forecast-item h1 {
   margin: auto;
 }
 
